Fix broken Dockerfile and update deployment docs
- Replace deprecated openjdk:17-jdk-slim with eclipse-temurin images
- Use JRE (not JDK) for the runtime stage
- Remove unnecessary COPY of sibling module sources (alloy.core, api,
  pardinus, etc.) — the gRPC module uses pre-built JARs from lib/,
  and copying bnd.bnd-containing directories caused the bnd workspace
  plugin to fail during configuration
- Remove unused build dependencies (git, unzip) from builder stage
- Remove unused runtime packages (curl, netcat-openbsd)
- Update README prerequisites (Java 17+, not 11+) and Docker section

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>